--- a/index.html
+++ b/index.html
@@ -7,22 +7,31 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="icon" href="assets/img/icon.png">
     <title>Happy Graduation Atiyah!</title>
     <link rel="stylesheet" href="assets/style.css">
+    <script src="https://kit.fontawesome.com/27e42df87e.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <div class="overlay">
+      <audio loop id="player">
+        <source src="assets/audio/backsound.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+      <i class="fas fa-play-circle" id="tombolPlay"></i>
+    </div>
       <div class="container-fluid">
         <div class="hero">
-            <div class="row">
+            <div class="row px-5">
                 <img src="assets/img/kananAtas.png" alt="" class="kananAtas">
                 <img src="assets/img/kiriBawah.png" alt="" class="kiriBawah">
                 <div class="col-md-6">
                   <div class="text-section">
-                      <h1 class="poppins happy">Happy Graduation</h1>
+                      <h1 class="poppins happy happy-graduation">Happy Graduation</h1>
                       <h1 class="dancing-script sub-head">Atiyah Ummi Sholihat</h1>
-                      <p class="text-justify">Maaf yaa gabisa ngasih apa apa cuma bisa bikinin web ini buat disimpen biar ada kenang kenangannya hehe. Anggep aja ini kado dari gua, ini bikin sendiri ko tapi cuma dibikin 3 harii jadi kalo ga maksimal maafin yaaa. BTW makasi jugaa buat kadonya bagus banget tau terharu gua wkwk.</p>
-                      <a class="btn dancing-script" href="#sectionUcapan">Klik sini mi</a>
+                      <p class="text-justify paragraf-hero">Maaf yaa gabisa ngasih apa apa cuma bisa bikinin web ini buat disimpen biar ada kenang kenangannya hehe. Anggep aja ini kado dari gua, ini bikin sendiri ko tapi cuma dibikin 3 harii jadi kalo ga maksimal maafin yaaa. BTW makasi jugaa buat kadonya bagus banget tau terharu gua wkwk.</p>
+                      <a class="btn dancing-script btn-hero" href="#sectionUcapan">Klik sini mi</a>
                   </div>
                   </div>
                 <div class="col-md-6 col-lg-6 col-sm-12">
@@ -35,14 +44,15 @@
       <div class="container-fluid">
         <div class="sectionUcapan" id="sectionUcapan">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-right">
               <img src="assets/img/ucapan.png" alt="" class="mainImageUcapan">
             </div>
             <div class="col-md-6">
-              <div class="text-section">
-                <h1 class="poppins happy">Haii, Selamat Atiyahh!</h1>
-                <h1 class="sub-head-kado dancing-script">Congratulations</h1>
+              <div class="text-section" data-aos="flip-right">
+                <h1 class="poppins happy">Haii, Selamat Atiyahh</h1>
+                <h1 class="sub-head-kado dancing-script">Congratulations!!!</h1>
                 <p class="box text-justify">Selamat yaa udah lulus SMK semoga makin sukses, makin banyak rezekinya. Jangan mageran lagi dongg harus semangat katanya mau punya banyak uang buat jajanin gua. Gua juga sekarang lagi berusaha sii biar nanti dapet kerjaan terus bisa ajak lu makan makan terus biar cepet gemuk wkwk, intinya lu gaboleh males malesan lagi okay? inget lu udah lulus SMK mi udah gede harus lebih dewasa lagii!</p>
+                <a class="btn dancing-script" href="#sectionKado">Klik sini mi</a>
               </div>
               <img src="assets/img/kananAtasUcapan.png" alt="" class="kananAtasUcapan">
               <img src="assets/img/kananBawahUcapan.png" alt="" class="kananBawahUcapan">
@@ -52,15 +62,167 @@
       </div>
 
       <div class="container-fluid">
-        <div class="sectionKado">
+        <div class="sectionKado" id="sectionKado">
           <div class="row">
-            <div class="col-md-12 col-lg-12 col-sm-12">
-              <h1 class="poppins text-center mt-5 happy">Kado Untuk Kamu</h1>
-              <h1 class="sub-head-kado dancing-script text-center">For Atiyah Ummi Sholihat</h1>
-              <div class="containerKado text-center">
-                <img src="assets/img/kado.png" alt="">
+            <div class="col-md-12 col-lg-12 col-sm-12 text-center">
+              <h1 class="poppins mt-5 happy">Kado Untuk Kamu</h1>
+              <h1 class="sub-head-kado dancing-script">For Atiyah Ummi Sholihat</h1>
+              <div class="containerKado">
+                <img src="assets/img/kado.png" alt="" id="gambarKado">
               </div>
+              <div class="containerIsiKado">
+                <img src="assets/img/isiKado.png" alt="">
+                <a class="btn dancing-script" href="#sectionCinema">Klik sini mi</a>
+              </div>
+              <img src="assets/img/kananAtasKado.png" alt="" class="kananAtasKado">
             </div>  
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="sectionCinema" id="sectionCinema">
+          <div class="row">
+            <div class="col-md-12 col-lg-12 col-sm-12 text-center">
+              <h1 class="poppins mt-5 happy">Cinema Summary</h1>
+              <h1 class="sub-head-kado dancing-script">Cinema Journey!</h1>
+              <img src="assets/img/kananAtasCinema.png" alt="" class="kananAtasCinema">
+              <img src="assets/img/tengahCinema.png" alt="" class="tengahCinema">
+              <a href="#sectionJalan" class="btn dancing-script">Klik sini mi</a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-2" data-aos="zoom-in-up">
+              <div class="card">
+                <img class="card-img-top" src="assets/img/nkcthi.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Nanti Kita Cerita Tentang Hari Ini</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Cibinong City Mall, Cibinong</h6>
+                  <p class="card-text">Film yang pertama kali kita tonton di bioskop. Masih inget kan? yang kita ber4, waktu itu lu juga ngasih gua ring gitu yang masih gua pake sampe sekarang. Waktu itu masih belum berani pegang tangan lu tapi gua udah nyender - nyender ke lu wkwk.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-2" data-aos="zoom-in-up" data-aos-delay="100">
+              <div class="card">
+                <img class="card-img-top" src="assets/img/mariposa.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Mariposa</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Kota Cinema, Bekasi</h6>
+                  <p class="card-text">Film kedua yang kita tonton kan? gua lupa urutannya mi maap yaa kalo salah. Ini bioskop yang paling jauh si buat gua wkwk waktu itu belum lancar lancar banget juga naik motornya tapi udah disuruh ke bekasi ajaa. Seru banget sih bisa jalan jauh sama lu pertama kali walaupun siang siang ya waktu itu panas banget.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-2" data-aos="zoom-in-up" data-aos-delay="200">
+              <div class="card">
+                <img class="card-img-top" src="assets/img/milea.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Milea (Suara Dari Dilan)</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Bellanova Country Mall, Sentul</h6>
+                  <p class="card-text">Pasti lu berkesan banget dong sama film ini.. Film yang lebih butuh perjuangan dibanding nonton mariposa wkwkwk. Ujan - ujanan, dorong motor, nyari parkiran, bawa - bawa helm, pokoknya banyak deh. Udah gitu pas di bioskop kedinginan bangett jadinya ga nonton sampe selesai deh karna filmnya gaterlalu seru juga sih ya. BTW bapak - bapak yang kepeleset di halte sekarang kabarnya gimana ya?.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-2" data-aos="zoom-in-up" data-aos-delay="300">
+              <div class="card">
+                <img class="card-img-top" src="assets/img/spiderman.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">SPIDER-MAN: NO WAY HOME</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Cibinong City Mall, Cibinong</h6>
+                  <p class="card-text">Kalo yang ini sih kayanya gada yang terlalu spesial yaa karna kita pacaran juga udah lama jadi biasa biasa aja. Tapi menurut lu gimana mi ni film seru ga? menurut gua si seru banget. Tapi pegelll banget soalnya dibangku F waktu itu jadi harus mayan keatas gitu palanya wkwk.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-2" data-aos="zoom-in-up" data-aos-delay="400">
+              <div class="card">
+                <img class="card-img-top" src="assets/img/dearnathan.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Dear Nathan Thank You Salma</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Cibinong City Mall, Cibinong</h6>
+                  <p class="card-text">Ni film parah sii seru banget Nathannya keren walaupun dia kena NTR sama kek gue. Gara - gara ni film gua jadi nontonin semua seriesnya dari awal tau hehew. Sama kaya sebelah pas kita nonton ini juga gaada kejadian yang baru, tapi seru si.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-2" data-aos="zoom-in-up" data-aos-delay="500">
+              <div class="card">
+                <img class="card-img-top" src="assets/img/kkn.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">KKN di Desa Penari (Uncut)</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Cibinong City Mall, Cibinong</h6>
+                  <p class="card-text">Gua kira ni film serem bgt tauu ternyata iklannya malah yang lebih serem dari filmnya. Ini jajan jajan kita paling banyak si sampe puas banget dari siang ampe malem jajannya wkwk. Ini paling berkesan sii karna gua setelah 2 tahun deket sama lu baru nembak lu. Kapan nih mau nonton film horror lagi?.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="sectionJalan" id="sectionJalan">
+          <div class="row">
+            <div class="col-md-12 col-lg-12 col-sm-12 text-center">
+              <h1 class="poppins mt-5 happy">Travel</h1>
+              <h1 class="sub-head-kado dancing-script">Ngeenggg...</h1>
+              <div class="containerMotor">
+                <img src="assets/img/motor.png" alt="" id="gambarMotor" class="motor">
+              </div>
+              <div class="containerIsiMotor">
+                <video controls>
+                  <source src="assets/video/travel2.mp4">
+                </video>
+                <a class="btn dancing-script" href="#sectionGame">Klik sini mi</a>
+              </div>
+              <img src="assets/img/kananAtasKado.png" alt="" class="kananAtasJalan">
+            </div>  
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="sectionGame" id="sectionGame">
+          <div class="row">
+            <div class="col-md-12 col-lg-12 col-sm-12 text-center">
+              <h1 class="poppins mt-5 happy">Games Section</h1>
+              <h1 class="sub-head-kado dancing-script">The games we've played </h1>
+              <p>Gua rasa gaterlalu banyak game yang kita mainin cuma ada beberapa doang, tapi seru banget bisa ketawa - ketawa bareng lu tapi sekarang udah gabisa guys HP umi memorinya abis wkwk.</p>
+              <a href="#sectionAzka" class="btn dancing-script">Klik sini mi</a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 text-center" data-aos="fade-right">
+              <img src="assets/img/game.png" alt="">
+              <img src="assets/img/tengahGame.png" alt="" class="tengahGame">
+            </div>
+            <div class="col-md-6" data-aos="flip-left">
+              <h2 class="poppins mt-5">HIDE ONLINE</h2>
+              <div class="box">
+                <p>Masih inget ga mi sama bapak bapak di game ini? kayanya ini game yang kita mainin bareng pertama kali ga sih? seru banget ya waktu itu panik panikan kalo dikejar. Kita main ini pas kelas 10 ato 11 sih? gua udah lupaa, pokoknya game ini berkesan banget deh buat gua harusnya kalo lu jadi benda kedengeran suaranya jadi gua bisa tau lu ada dimana tapi karena kita main sambil telponan jadi gua gabisa denger sama sekali suaranya anjir malah jadi hard mode wkwk.</p>
+              </div>
+              <h2 class="poppins mt-5">FARM CITY</h2>
+              <div class="box">
+                <p>Game yang gua download iseng - iseng eh malah ketauan sama lu gara gara nyambung ke facebook. Gamenya seruu kalo main bareng lu, apalagi kalo ada fitur nonton iklan buat cepetin tapi sayangnya di appstore udah gaada game ini jadi umi main sendiri lagi deh sekarang, sendiri kan?? awas lu ajak cowo laen.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="sectionAzka" id="sectionAzka">
+          <div class="row mt-5">
+            <div class="col-md-12 col-lg-12 col-sm-12 text-center">
+              <h1 class="poppins happy">Ending</h1>
+              <h1 class="sub-head-kado dancing-script">Sad Ending? or Happy Ending?</h1>
+              <img src="assets/img/kananAtasUcapan.png" alt="" class="kananAtasAzka">
+            </div>
+          </div>
+          <div class="row text-center">
+            <div class="col-md-12 ">
+              <img src="assets/img/azka.png" alt="">
+              <div class="box2">
+                <p>Haii Atiyah, gakerasa ya kita udah ga satu sekolah lagi gabisa main abis pulang sekolah, gabisa liat liatan pas duquba gabisa macem macem dehh wkwkw. Kaya cepet banget tau padahal gua gamau jauh jauh dari lu, ya walaupun rumah gua ke rumah lu deket tapi kan kaya kurang aja gituu kalo bukan satu sekolah lagi, inget ga pas kita jalan malem malem ke cibubur? waktu itu kita berangkat ke cibuburnya aja malem tau jd pulangnya malem jugaa kalo gasalah jam 8 ya?. Padahal itu pas kita kelas 10 tapi gua ngerasanya kaya baru aja ngalamin kemaren wkwk. Semoga abis kita ga satu sekolah lagi kita bisa main bareng lagi yaa!.</p>
+                <p class="text-muted">- Your best partner, Azkazikna</p>
+            </div>
+            </div>
           </div>
         </div>
       </div>
@@ -70,6 +232,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/script.js"></script>
   </body>
 </html>
