--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h1 class="poppins happy">Haii, Selamat Atiyahh</h1>
                 <h1 class="sub-head-kado dancing-script">Congratulations!!!</h1>
                 <p class="box text-justify">Selamat yaa udah lulus SMK semoga makin sukses, makin banyak rezekinya. Jangan mageran lagi dongg harus semangat katanya mau punya banyak uang buat jajanin gua. Gua juga sekarang lagi berusaha sii biar nanti dapet kerjaan terus bisa ajak lu makan makan terus biar cepet gemuk wkwk, intinya lu gaboleh males malesan lagi okay? inget lu udah lulus SMK mi udah gede harus lebih dewasa lagii!</p>
-                <a class="btn dancing-script" href="#sectionKado">Klik sini mi</a>
+                <a class="btn dancing-script mb-5" href="#sectionKado">Klik sini mi</a>
               </div>
               <img src="assets/img/kananAtasUcapan.png" alt="" class="kananAtasUcapan">
               <img src="assets/img/kananBawahUcapan.png" alt="" class="kananBawahUcapan">
@@ -183,41 +183,40 @@
             <div class="col-md-12 col-lg-12 col-sm-12 text-center">
               <h1 class="poppins mt-5 happy">Games Section</h1>
               <h1 class="sub-head-kado dancing-script">The games we've played </h1>
-              <p>Gua rasa gaterlalu banyak game yang kita mainin cuma ada beberapa doang, tapi seru banget bisa ketawa - ketawa bareng lu tapi sekarang udah gabisa guys HP umi memorinya abis wkwk.</p>
               <a href="#sectionAzka" class="btn dancing-script">Klik sini mi</a>
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 text-center" data-aos="fade-right">
-              <img src="assets/img/game.png" alt="">
-              <img src="assets/img/tengahGame.png" alt="" class="tengahGame">
+              <img src="assets/img/game.png" alt="" class="games">
             </div>
             <div class="col-md-6" data-aos="flip-left">
-              <h2 class="poppins mt-5">HIDE ONLINE</h2>
               <div class="box">
-                <p>Masih inget ga mi sama bapak bapak di game ini? kayanya ini game yang kita mainin bareng pertama kali ga sih? seru banget ya waktu itu panik panikan kalo dikejar. Kita main ini pas kelas 10 ato 11 sih? gua udah lupaa, pokoknya game ini berkesan banget deh buat gua harusnya kalo lu jadi benda kedengeran suaranya jadi gua bisa tau lu ada dimana tapi karena kita main sambil telponan jadi gua gabisa denger sama sekali suaranya anjir malah jadi hard mode wkwk.</p>
+                <p><span class="font-weight-bold">HIDE ONLINE - </span>Masih inget ga mi sama bapak bapak di game ini? kayanya ini game yang kita mainin bareng pertama kali ga sih? seru banget ya waktu itu panik panikan kalo dikejar. Kita main ini pas kelas 10 ato 11 sih? gua udah lupaa, pokoknya game ini berkesan banget deh buat gua harusnya kalo lu jadi benda kedengeran suaranya jadi gua bisa tau lu ada dimana tapi karena kita main sambil telponan jadi gua gabisa denger sama sekali suaranya anjir malah jadi hard mode wkwk.</p>
+                <p><span class="font-weight-bold">FARM CITY - </span>Game yang gua download iseng - iseng eh malah ketauan sama lu gara gara nyambung ke facebook. Gamenya seruu kalo main bareng lu, apalagi kalo ada fitur nonton iklan buat cepetin tapi sayangnya di appstore udah gaada game ini jadi umi main sendiri lagi deh sekarang, sendiri kan?? awas lu ajak cowo laen.</p>
               </div>
-              <h2 class="poppins mt-5">FARM CITY</h2>
-              <div class="box">
-                <p>Game yang gua download iseng - iseng eh malah ketauan sama lu gara gara nyambung ke facebook. Gamenya seruu kalo main bareng lu, apalagi kalo ada fitur nonton iklan buat cepetin tapi sayangnya di appstore udah gaada game ini jadi umi main sendiri lagi deh sekarang, sendiri kan?? awas lu ajak cowo laen.</p>
+              <div class="box mt-2">
+                
               </div>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="container-fluid">
+      <div class="container-fluid mt-5">
         <div class="sectionAzka" id="sectionAzka">
-          <div class="row mt-5">
+          <div class="row">
             <div class="col-md-12 col-lg-12 col-sm-12 text-center">
               <h1 class="poppins happy">Ending</h1>
               <h1 class="sub-head-kado dancing-script">Sad Ending? or Happy Ending?</h1>
               <img src="assets/img/kananAtasUcapan.png" alt="" class="kananAtasAzka">
             </div>
           </div>
-          <div class="row text-center">
-            <div class="col-md-12 ">
+          <div class="row">
+            <div class="col-md-6 ">
               <img src="assets/img/azka.png" alt="">
+            </div>
+            <div class="col-md-6">
               <div class="box2">
                 <p>Haii Atiyah, gakerasa ya kita udah ga satu sekolah lagi gabisa main abis pulang sekolah, gabisa liat liatan pas duquba gabisa macem macem dehh wkwkw. Kaya cepet banget tau padahal gua gamau jauh jauh dari lu, ya walaupun rumah gua ke rumah lu deket tapi kan kaya kurang aja gituu kalo bukan satu sekolah lagi, inget ga pas kita jalan malem malem ke cibubur? waktu itu kita berangkat ke cibuburnya aja malem tau jd pulangnya malem jugaa kalo gasalah jam 8 ya?. Padahal itu pas kita kelas 10 tapi gua ngerasanya kaya baru aja ngalamin kemaren wkwk. Semoga abis kita ga satu sekolah lagi kita bisa main bareng lagi yaa!.</p>
                 <p class="text-muted">- Your best partner, Azkazikna</p>
